--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -125,8 +125,8 @@
     <div id="container">
         <div id="layer-controls">
             <label><input type="checkbox" class="layer-toggle" value="Parcels" checked> Parcels</label><br>
-            <label><input type="checkbox" class="layer-toggle" value="Proposed-Zones" checked> Proposed
-                zoning</label><br>
+            <!-- <label><input type="checkbox" class="layer-toggle" value="Proposed-Zones" checked> Proposed
+                zoning</label><br> -->
 
             <label><input type="checkbox" class="layer-toggle" value="Lot-Sizes-of-Residential-Parcels"> Lot
                 size</label><br>
@@ -134,7 +134,7 @@
                 frontage</label><br>
             <label><input type="checkbox" class="layer-toggle"
                     value="Residential-Parcels-Smaller-than-Minimum-Lot-Size"> Insufficient lot size</label><br>
-            <label><input type="checkbox" class="layer-toggle" value="Overlay"> Overlays</label><br>
+            <!-- <label><input type="checkbox" class="layer-toggle" value="Overlay"> Overlays</label><br> -->
             <label><input type="checkbox" class="layer-toggle" value="Too-Little-Setback"> Insufficient front
                 setback</label><br>
             <label><input type="checkbox" class="layer-toggle" value="Too-Much-Coverage"> Building coverage greater than
@@ -215,26 +215,50 @@
 
         const usesAndColors = uses.flatMap((use, i) => [use, useColors[i]]);
 
-        const zones = ['BA', 'BB', 'BC', 'C', 'CR', 'HR1', 'HR2', 'I', 'LC', 'RA1', 'RA2', 'RA3', 'RA4', 'RB', 'RC', 'RD']
+        // const zones = ['BA', 'BB', 'BC', 'C', 'CR', 'HR1', 'HR2', 'I', 'LC', 'RA1', 'RA2', 'RA3', 'RA4', 'RB', 'RC', 'RD']
+
+        // const zoneColors = [
+        //     "#ffb3b3", // BA
+        //     "#f26b6b", // BB
+        //     "#a82940", // BC
+        //     "#f7d8d8", // C
+        //     "#bdd66b", // CR
+        //     "#0057e7", // HR1
+        //     "#734ac3", // HR2
+        //     "#b3b3b3", // I
+        //     "#b7a4ff", // LC
+        //     "#fff9dc", // RA1
+        //     "#fff099", // RA2
+        //     "#f4dd63", // RA3
+        //     "#f5b72d", // RA4
+        //     "#f18c1b", // RB
+        //     "#c87a12", // RC
+        //     "#a55a00"  // RD
+        // ];
+        const zones = ['SSF', 'SMF', 'SMU', 'RR', 'TSF', 'TTF', 'TMF', 'TMU', 'NB', 'USF', 'UMF', 'UMU', 'DMU', 'HRC', 'INST', 'OP', 'LI', 'GI', 'PDMI', 'HCD']
         const zonesProps = ['B1', 'MU', 'BC', 'C', 'CR', 'HR1', 'HR2', 'I', 'INST', 'C/RD', 'R1', 'R2', 'R3', 'R4']
 
         const zoneColors = [
-            "#ffb3b3", // BA
-            "#f26b6b", // BB
-            "#a82940", // BC
-            "#f7d8d8", // C
-            "#bdd66b", // CR
-            "#0057e7", // HR1
-            "#734ac3", // HR2
-            "#b3b3b3", // I
-            "#b7a4ff", // LC
-            "#fff9dc", // RA1
-            "#fff099", // RA2
-            "#f4dd63", // RA3
-            "#f5b72d", // RA4
-            "#f18c1b", // RB
-            "#c87a12", // RC
-            "#a55a00"  // RD
+            "#fff9dc", // SSF surburban single-family (keep - lightest)
+            "#f5b72d", // SMF suburban multi-family (medium orange)
+            "#f26b6b", // SMU suburban mixed-use
+            "#b7a4ff", // RR regional retail
+            "#fff099", // TSF traditional single-family (light yellow)
+            "#e6a832", // TTF traditional two-family (orange)
+            "#c87a12", // TMF traditional multi-family (dark brown)
+            "#9966cc", // TMU traditional mixed-use
+            "#ffb3b3", // NB neighborhood business
+            "#f4dd63", // USF urban single-family (bright yellow)
+            "#a55a00", // UMF urban multi-family (keep - darkest)
+            "#cc6699", // UMU urban mixed-use
+            "#8b4b8b", // DMU downtown mixed-use
+            "#f7d8d8", // HRC high-rise commercial district
+            "#bdd66b", // INST institional mixed-use district
+            "#87ceeb", // OP office/research park
+            '#b3b3b3', // LI light industry
+            '#666666', // GI general industry
+            '#20b2aa', // PDMI planned development medical/institutional
+            '#d2691e'  // HCD hamilton canal district
         ];
 
         const proposedColors = [
@@ -262,7 +286,7 @@
             container: 'map',
             // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
             style: 'mapbox://styles/communityscale/cmcuwuwcv00xz01s1gn7xccqi',
-            zoom: 12.5,
+            zoom: 12.7,
             center: [-71.3162, 42.6334],
             projection: 'globe'
         });
@@ -297,10 +321,10 @@
                 color: zoneColors[i],
                 label: zone
             })),
-            'Proposed-Zones': zonesProps.map((zonesProp, i) => ({
-                color: proposedColors[i],
-                label: zonesProp
-            })),
+            // 'Proposed-Zones': zonesProps.map((zonesProp, i) => ({
+            //     color: proposedColors[i],
+            //     label: zonesProp
+            // })),
             'Uses': [
                 { color: useColors[1], label: 'Single-family' },
                 { color: useColors[6], label: 'Two-family' },
@@ -317,13 +341,13 @@
                 { color: useColors[10], label: 'Other use' },
             ],
 
-            'Overlay': [
-                { color: 'black', label: 'ROD' },
-                { color: '#0040fe', label: 'LCRAP' },
-                { color: '#21abe6', label: 'LCRA' },
-                { color: '#9971ff', label: 'MCMOD/MBTABR' },
-                { color: '#006663', label: 'MBTAW' }
-            ]
+            // 'Overlay': [
+            //     { color: 'black', label: 'ROD' },
+            //     { color: '#0040fe', label: 'LCRAP' },
+            //     { color: '#21abe6', label: 'LCRA' },
+            //     { color: '#9971ff', label: 'MCMOD/MBTABR' },
+            //     { color: '#006663', label: 'MBTAW' }
+            // ]
         };
 
                     let labelLayerId; //pull text fields on top!!
@@ -369,19 +393,19 @@
 
             map.addSource('allparcels', {
                 type: 'geojson',
-                data: 'https://raw.githubusercontent.com/CommunityScale/Waltham/main/existinguse.geojson',
+                data: 'allparcels.geojson',
                 promoteId: "LOC_ID"
             });
 
-            map.addSource('overlays', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/CommunityScale/Waltham/refs/heads/main/overlays.geojson'
-            });
+            // map.addSource('overlays', {
+            //     type: 'geojson',
+            //     data: 'https://raw.githubusercontent.com/CommunityScale/Waltham/refs/heads/main/overlays.geojson'
+            // });
 
-            map.addSource('proposedzone', {
-                type: 'geojson',
-                data: 'ProposedZone_25_08_15.geojson'
-            });
+            // map.addSource('proposedzone', {
+            //     type: 'geojson',
+            //     data: 'ProposedZone_25_08_15.geojson'
+            // });
 
             map.addSource('water', {
                 type: 'geojson',
@@ -412,7 +436,7 @@
                 type: 'fill',
                 source: 'allparcels',
                 paint: {
-                    'fill-color': ['match', ['string', ['get', 'NAME']], ...zonesAndColors, '#AAAAAA'],
+                    'fill-color': ['match', ['string', ['get', 'ZONE']], ...zonesAndColors, '#AAAAAA'],
                     'fill-opacity': [
                         "case",
                         ["boolean", ["feature-state", "hover"], false],
@@ -422,20 +446,20 @@
             }, labelLayerId
             );
 
-            map.addLayer({
-                id: 'Proposed-Zones',
-                type: 'fill',
-                source: 'proposedzone',
-                paint: {
-                    'fill-color': ['match', ['string', ['get', 'PropZo1']], ...zonesAndColorsProps, '#AAAAAA'],
-                    'fill-opacity': [
-                        "case",
-                        ["boolean", ["feature-state", "hover"], false],
-                        0.5,
-                        1]
-                }
-            }, labelLayerId
-            );
+            // map.addLayer({
+            //     id: 'Proposed-Zones',
+            //     type: 'fill',
+            //     source: 'proposedzone',
+            //     paint: {
+            //         'fill-color': ['match', ['string', ['get', 'PropZo1']], ...zonesAndColorsProps, '#AAAAAA'],
+            //         'fill-opacity': [
+            //             "case",
+            //             ["boolean", ["feature-state", "hover"], false],
+            //             0.5,
+            //             1]
+            //     }
+            // }, labelLayerId
+            // );
 
             map.addLayer({
                 id: 'Lot-Sizes-of-Residential-Parcels',
@@ -444,10 +468,10 @@
                 paint: {
                     'fill-outline-color': 'white',
                     'fill-color': [
-                        "case", ["==", ["get", "SQFT"], null], 'white',
+                        "case", ["==", ["get", "res_lot_size_sf"], null], 'white',
                         ["interpolate",
                             ["linear"],
-                            ["get", "SQFT"],
+                            ["get", "res_lot_size_sf"],
                             0,
                             lotSizePalette[0],
                             4000,
@@ -484,7 +508,7 @@
                 paint: {
                     'fill-color': [
                         'match',
-                        ['get', 'LotTooSmal'],
+                        ['get', 'ncf_min_lot_size'],
                         1, 'rgba(0, 0, 0, .25)',
                         'rgba(0, 0, 0, 0)' // default fallback color
                     ]
@@ -555,24 +579,24 @@
             }, labelLayerId);
 
 
-            map.addLayer({
-                id: 'Overlay',
-                type: 'line',
-                source: 'overlays',
-                paint: {
-                    'line-width': 4,
-                    'line-color': [
-                        'match',
-                        ['get', 'NAME'],
-                        'ROD', 'black',
-                        'LCRAP', '#0040fe',
-                        'LCRA', '#21abe6',
-                        'MCMOD', '#9971ff',
-                        'MBTAW', '#006663',
-                        'transparent' // default fallback color
-                    ],
-                }
-            }, labelLayerId);
+            // map.addLayer({
+            //     id: 'Overlay',
+            //     type: 'line',
+            //     source: 'overlays',
+            //     paint: {
+            //         'line-width': 4,
+            //         'line-color': [
+            //             'match',
+            //             ['get', 'NAME'],
+            //             'ROD', 'black',
+            //             'LCRAP', '#0040fe',
+            //             'LCRA', '#21abe6',
+            //             'MCMOD', '#9971ff',
+            //             'MBTAW', '#006663',
+            //             'transparent' // default fallback color
+            //         ],
+            //     }
+            // }, labelLayerId);
 
             map.addLayer({
                 id: 'Boundary',
@@ -596,7 +620,7 @@
             map.setLayoutProperty('Too-Much-Coverage', 'visibility', 'none');
             map.setLayoutProperty('Too-Little-Setback', 'visibility', 'none');
             map.setLayoutProperty('Zones', 'visibility', 'none');
-            map.setLayoutProperty('Overlay', 'visibility', 'none');
+            // map.setLayoutProperty('Overlay', 'visibility', 'none');
             map.setLayoutProperty('Uses', 'visibility', 'none');
             map.setLayoutProperty('settlement-major-label', 'visibility', 'visible');
             map.setLayoutProperty('settlement-subdivision-label', 'visibility', 'visible');
@@ -611,9 +635,9 @@
                 'Lot-Sizes-of-Residential-Parcels': 'lotsizeLegend',
                 'Too-Little-Setback': 'toolittleSetbackLegend',
                 'Too-Much-Coverage': 'toomuchCoverageLegend',
-                'Zones': 'existzoneLegend',
-                'Overlay': 'overlayLegend',
-                'Proposed Zones': 'proposedLegend'
+                'Zones': 'existzoneLegend'
+                // 'Overlay': 'overlayLegend'
+                // 'Proposed Zones': 'proposedLegend'
             };
 
             checkboxes.forEach((checkbox) => {
