--- a/audit-styled.html
+++ b/audit-styled.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Lowell Zoning Ordinance Audit - Modernizing Lowell's Blueprint for Growth. Comprehensive analysis and recommendations for zoning code rewrite.">
   <meta name="keywords" content="zoning ordinance, Lowell, audit, planning, housing, development, municipal code">
-  <meta name="author" content="Lowell Zoning Rewrite Initiative">
+  <meta name="author" content="CommunityScale">
   <meta name="robots" content="index, follow">
   <meta name="language" content="en">
   <meta name="theme-color" content="#3B82F6">
