move file to a public bucket

--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -379,7 +379,7 @@
 
             // map.addSource('frontage', {
             //     type: 'geojson',
-            //     data: 'parcel-segments.geojson'
+            //     data: 'https://raw.githubusercontent.com/CommunityScale/bucket/295f52b99d3948e011b175e39838fb50cbcf8a8a/parcel-segments.geojson'
             // });
 
             // map.addSource('hydro', {
