--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -140,7 +140,8 @@
                 setback</label><br> -->
             <label><input type="checkbox" class="layer-toggle" value="Usable-Open-Space"> Insufficient usable open space per DU</label><br>
             <label><input type="checkbox" class="layer-toggle" value="Zones" checked> Existing zoning</label><br>
-            <label><input type="checkbox" class="layer-toggle" value="Uses"> Existing use</label>
+            <label><input type="checkbox" class="layer-toggle" value="Uses"> Existing use</label><br>
+            <label><input type="checkbox" class="layer-toggle" value="Variances">Variances</label>
         </div>
     </div>
     <div id="map"></div>
@@ -274,6 +275,18 @@
             "#c87a12", // R4
         ];
 
+        const varianceColors = [
+            "#ff60a5", // P
+            "#3c9cfc", // Dim
+            "#ffee35", // Dens
+            "#b03bfe", // P + Dim
+            "#ff9327", // P + Dens
+            "#3dcd63", // Dim + Dens
+            "#7d7d7d", // P + Dim + Dens
+            "#c5c5c5", // Other
+    ];
+
+
         const zonesAndColors = zones.flatMap((zone, i) => [zone, zoneColors[i]]);
         const zonesAndColorsProps = zonesProps.flatMap((zonesProp, i) => [zonesProp, proposedColors[i]]);
 
@@ -339,6 +352,17 @@
                 { color: useColors[10], label: 'Other use' },
             ],
 
+            'Variances': [
+                { color: varianceColors[0], label: 'Parking', type: 'circle' },
+                { color: varianceColors[1], label: 'Dimensional', type: 'circle' },
+                { color: varianceColors[2], label: 'Density', type: 'circle' },
+                { color: varianceColors[3], label: 'Parking & Dimensional', type: 'circle' },
+                { color: varianceColors[4], label: 'Parking & Density', type: 'circle' },
+                { color: varianceColors[5], label: 'Dimensional & Density', type: 'circle' },
+                { color: varianceColors[6], label: 'Parking, Dimensional, & Density', type: 'circle' },
+                { color: varianceColors[7], label: 'Other', type: 'circle' },
+            ],
+
             // 'Overlay': [
             //     { color: 'black', label: 'ROD' },
             //     { color: '#0040fe', label: 'LCRAP' },
@@ -391,6 +415,11 @@
                 type: 'geojson',
                 data: 'allparcels.geojson',
                 promoteId: "LOC_ID"
+            });
+
+            map.addSource('lowellvariances', {
+                type: 'geojson',
+                data: 'lowellvariances.geojson',
             });
 
             // map.addSource('overlays', {
@@ -620,6 +649,30 @@
                 }
             }, labelLayerId);
 
+             map.addLayer({
+                id: 'Variances',
+                type: 'circle',
+                source: 'lowellvariances',
+                paint: {
+                    'circle-color': [
+                        'match',
+                        ['get', 'code'],
+                        1, varianceColors[0],
+                        2, varianceColors[1],
+                        3, varianceColors[2],
+                        4, varianceColors[3],
+                        5, varianceColors[4],
+                        6, varianceColors[5],
+                        7, varianceColors[6],
+                        8, varianceColors[7],
+                        '#999999'  // fallback
+            ],
+                    'circle-radius': 5,
+                    'circle-stroke-width': 1,
+                    'circle-stroke-color': 'black',
+                }
+            }, labelLayerId);
+
             window.addEventListener('resize', () => {
                 map.resize();
             });
@@ -633,6 +686,7 @@
             // map.setLayoutProperty('Zones', 'visibility', 'none');
             // map.setLayoutProperty('Overlay', 'visibility', 'none');
             map.setLayoutProperty('Uses', 'visibility', 'none');
+            map.setLayoutProperty('Variances', 'visibility', 'none');
             map.setLayoutProperty('settlement-major-label', 'visibility', 'visible');
             map.setLayoutProperty('settlement-subdivision-label', 'visibility', 'visible');
             map.setLayoutProperty('settlement-minor-label', 'visibility', 'visible');
