--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -408,18 +408,18 @@
 
             map.addSource('Boundary', {
                 type: 'geojson',
-                data: 'lowell_outline.geojson'
+                data: 'https://github.com/CommunityScale/Lowell/raw/refs/heads/main/lowell_outline.geojson'
             });
 
             map.addSource('allparcels', {
                 type: 'geojson',
-                data: 'allparcels.geojson',
+                data: 'https://github.com/CommunityScale/Lowell/raw/refs/heads/main/allparcels.geojson',
                 promoteId: "LOC_ID"
             });
 
             map.addSource('lowellvariances', {
                 type: 'geojson',
-                data: 'lowellvariances.geojson',
+                data: 'https://github.com/CommunityScale/Lowell/raw/refs/heads/main/lowellvariances.geojson',
             });
 
             // map.addSource('overlays', {
