updated media link

--- a/dimreqsmap.html
+++ b/dimreqsmap.html
@@ -425,7 +425,7 @@
 
             map.addSource('overlays', {
                  type: 'geojson',
-                 data: 'lowelloverlays.geojson'
+                 data: 'https://media.githubusercontent.com/media/CommunityScale/Lowell/main/lowelloverlays.geojson'
              });
 
             // map.addSource('proposedzone', {
